--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 jupyter==1.0.0
 numpy==1.26.4
 pandas==2.2.3
-matplotlib==3.8.4
-topfarm==2.5.0
+matplotlib==3.10.1
+pydoe2==1.3.0
+cftime==1.6.4
+netcdf4==1.7.4
+topfarm==2.6.1
