--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-jupyter==1.0.0
+ipykernel==6.29.5
 numpy==1.26.4
 pandas==2.2.3
 matplotlib==3.10.1
 pydoe2==1.3.0
 cftime==1.6.4
 netcdf4==1.7.4
+h5py==3.10.0
 topfarm==2.6.1
